compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__unknown_field_that_does_not_appear_in_variant_has_no_note.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2462
expression: "\npub type Wibble {\n  Wibble(field: Int)\n  Wobble(not_field: String, field: Int)\n}\n\npub fn main(wibble: Wibble) {\n  wibble.wibble\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Wibble {
  Wibble(field: Int)
  Wobble(not_field: String, field: Int)
}

pub fn main(wibble: Wibble) {
  wibble.wibble
}


----- ERROR
error: Unknown record field
  ┌─ /src/one/two.gleam:8:10
  │
8 │   wibble.wibble
  │          ^^^^^^ This field does not exist

The value being accessed has this type:

    Wibble

It does not have fields that are common across all variants.
