compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__unknown_module_suggest_import.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2238
expression: "\npub fn main() {\n  utils.helpful()\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
-- utils.gleam
pub fn helpful() {}

-- main.gleam

pub fn main() {
  utils.helpful()
}


----- ERROR
error: Unknown module
  ┌─ /src/one/two.gleam:3:3
  │
3 │   utils.helpful()
  │   ^^^^^

No module has been found with the name `utils`.
Hint: Did you mean to import `utils`?
