compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__update_multi_variant_record.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2003
expression: "\npub type Point {\n  Point2(a: Int, b: Int)\n  Point3(a: Int, b: Int, c: Int)\n}\n\npub fn main() {\n  Point3(..Point2(a: 1, b: 2))\n}"
snapshot_kind: text
---
----- SOURCE CODE

pub type Point {
  Point2(a: Int, b: Int)
  Point3(a: Int, b: Int, c: Int)
}

pub fn main() {
  Point3(..Point2(a: 1, b: 2))
}

----- ERROR
error: Incorrect record update
  ┌─ /src/one/two.gleam:8:12
  │
8 │   Point3(..Point2(a: 1, b: 2))
  │            ^^^^^^^^^^^^^^^^^^ This is a `Point2`

This value is a `Point2` so it cannot be used to build a `Point3`, even if
they share some fields.

Note: If you want to change one variant of a type into another, you should
specify all fields explicitly instead of using the record update syntax.
